--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.password=64Tank46
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.open-in-view=false
+hibernate.show_sql=true
+logging.level.org.springframework.security=DEBUG
+
+spring.messages.basename=messages
